# battery-cv

./: .gitignore  README.md  README_AZURE.md  aihub_selective_download.py  analyze_distribution.py  analyze_recent_jobs.py  anomaly_experiment.py  api관련문의캡처.xlsx  build_dataset_from_csv.py  check_resolution.py  check_subset_defects.py  classification-pipeline.yml  classification-preprocess-job.yml  classification-train-job-multigpu.yml  classification-train-job.yml  cluster_experiment.py  config.json  debug_output.txt  distribution_report.txt  final_fastflow_training.py  find_high_defects.py  find_real_defects.py  get_latest_job.py  get_logs.py  inference-job.yml  job_status.json  model_attrs.txt  monitor_jobs.py  organize_dataset.py  pad_dataset.py  pipeline.yml  purify_dataset.py  run_csv_inspector.bat  run_dataset_builder.bat  run_inference.bat  run_inference.py  run_inspector.bat  run_local_upload.bat  run_migration.bat  run_modeling.bat  (+15 more)
.agent/workflows/: code-review.md
.github/workflows/: check_datasets.yml  classification_train.yml  eval_stage2.yml  eval_stage3_test.yml  phase2_heatmap.yml  phase2_inference.yml  tain.yml  train.yml
command/: azure_credential_comman.md
env/: .dockerignore  Dockerfile  conda_env.yml  environment.yml  pyproject.toml
logs_anomalib_test/artifacts/azureml-logs/: 20_image_build_log.txt
logs_anomalib_test/artifacts/system_logs/data_capability/: rslex.log.2026-02-04-09
logs_anomalib_test/artifacts/user_logs/: std_log.txt
logs_helpful_chayote_jmn67f51wk/artifacts/system_logs/data_capability/: rslex.log.2026-02-04-07
logs_helpful_chayote_jmn67f51wk/artifacts/user_logs/: std_log.txt
logs_imgbldrun_2a2a101/artifacts/: run_aggregate_log.txt
logs_imgbldrun_2a2a101/artifacts/user_logs/: std_log.txt
logs_imgbldrun_2d3ca86/artifacts/: run_aggregate_log.txt
logs_imgbldrun_2d3ca86/artifacts/user_logs/: std_log.txt
logs_imgbldrun_a2bda17/artifacts/: run_aggregate_log.txt
logs_imgbldrun_a2bda17/artifacts/user_logs/: std_log.txt
logs_imgbldrun_b23b17c/artifacts/: run_aggregate_log.txt
logs_imgbldrun_b23b17c/artifacts/user_logs/: std_log.txt
logs_imgbldrun_f9e60f3/artifacts/: run_aggregate_log.txt
logs_imgbldrun_f9e60f3/artifacts/user_logs/: std_log.txt
logs_ivory_neck_7x519c2nbf/artifacts/system_logs/data_capability/: rslex.log.2026-02-04-09
logs_ivory_neck_7x519c2nbf/artifacts/user_logs/: std_log.txt
logs_khaki_prune_8rvvgmxcvs/artifacts/system_logs/data_capability/: rslex.log.2026-02-09-06
logs_khaki_prune_8rvvgmxcvs/artifacts/user_logs/: std_log.txt
logs_neat_reggae_96t2yr7nxh/artifacts/system_logs/data_capability/: rslex.log.2026-02-09-07
logs_neat_reggae_96t2yr7nxh/artifacts/user_logs/: std_log.txt
logs_patient_street_t3m9y86h4m/artifacts/system_logs/data_capability/: rslex.log.2026-02-09-06
logs_patient_street_t3m9y86h4m/artifacts/user_logs/: std_log.txt
logs_sad_dinner_k61r3nkv0n/artifacts/system_logs/data_capability/: rslex.log.2026-02-09-06
logs_sad_dinner_k61r3nkv0n/artifacts/user_logs/: std_log.txt
logs_salmon_pocket_3x3ts745cp/artifacts/system_logs/data_capability/: rslex.log.2026-02-04-09
logs_salmon_pocket_3x3ts745cp/artifacts/user_logs/: std_log.txt
logs_silver_parang_wk229l18fw/artifacts/system_logs/data_capability/: rslex.log.2026-02-04-06
logs_silver_parang_wk229l18fw/artifacts/user_logs/: std_log.txt
logs_sleepy_ball_k1zsv2hp9m/artifacts/system_logs/data_capability/: rslex.log.2026-02-04-07
logs_sleepy_ball_k1zsv2hp9m/artifacts/user_logs/: std_log.txt
src/: .amlignore  .trigger  Dockerfile  conda_env.yml  extractor.py  good_list.csv  index.py  inference.py  preprocess.py  pyproject.toml  requirements.txt  test_eval.py  train_rect.py  trigger_inference.py
src/classification/: normal_download_list.csv  preprocess_entry.py  preprocess_v5.py  segment_experiment.py  train_entry.py  train_entry_v4.py  train_entry_v5.py  train_entry_v6.py
src/inference/: inference.py  preprocess.py
src/preprocess/: preprocess.py  preprocess_entry.py
src/train/: index.py
workspace/Job_Patchcore_sungtae_OutputsAndLogs/system_logs/data_capability/: rslex.log.2026-02-13-08
workspace/Job_Patchcore_sungtae_OutputsAndLogs/user_logs/: std_log.txt
workspace/env-yolo-21/: Dockerfile  pyproject.toml
