[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomalib-env"
version = "0.1.0"
description = "Professional production environment for Anomalib 2.2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "setuptools<75.0.0",      # pkg_resources 삭제 방지
    "packaging>=23.0,<25.0",
    "adlfs>=2021.10.0",
    "fsspec>=2021.10.0",
    "mlflow>=2.10.0,<3.0.0",
    "azureml-mlflow",
    "anomalib==2.2.0",
    "torch>=2.4.0,<2.6.0",              # anomalib 2.2.0 extras 최소 요구 2.4.0 (↑ 2.2.0→2.4.0)
    "torchvision>=0.19.0,<0.21.0",      # torch 2.4.0 대응 버전 (↑ 0.17.0→0.19.0)
    "lightning>=2.2.0,<3.0.0",          # anomalib: >=2.2 (상한 완화 <2.6→<3.0)
    "torchmetrics>=1.8.2,<2.0.0",       # anomalib 2.2.0 명시 요구 1.8.2+ (↑↑ 1.1.0→1.8.2, <1.9→<2.0)
    "loguru>=0.7.0,<1.0.0",             # index.py 직접 사용 (anomalib 불필요하나 코드 의존)
    "opencv-python-headless>=4.5.3.56,<5.0.0",  # anomalib 정확한 최소값 (↑ 4.5.0→4.5.3.56)
    "numpy>=1.24.4,<2.0.0",
    "pandas>=1.1.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    # imgaug: anomalib 2.x에서 완전 제거됨 (torchvision.transforms.v2로 대체)
    "timm>=0.9.0,<2.0.0",
    "kornia>=0.6.6,<1.0.0",             # 상한 완화 (<0.8.0→<1.0.0, anomalib 제약 없음)
    "einops>=0.3.2,<1.0.0",
    "freia>=0.2.0,<1.0.0",              # FastFlow 필수 의존성
    "omegaconf>=2.1.1,<3.0.0",
    "rich>=13.5.2,<14.0.0",
    "matplotlib>=3.4.3,<4.0.0",         # 상한 완화 (<3.8→<4.0, anomalib 2.x는 3.8+ 지원)
    "open_clip_torch>=2.23.0,<2.26.1",  # anomalib [clip] extra 공식 범위 (정확히 일치)
    "openvino>=2024.0.0,<2026.0.0",     # 상한 완화 (<2025→<2026, 2025.x 출시됨)
]

[tool.hatch.build.targets.wheel]
packages = ["."]
