[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomalib-yolo-detector"
version = "0.1.0"
description = "Anomalib and YOLO object detection with Azure ML"
requires-python = ">=3.11,<3.12"
dependencies = [
    "setuptools",            # mlflow의 pkg_resources 에러 해결을 위한 근본 대책
    "adlfs",
    "fsspec",
    "mlflow>=2.18.0,<3.0.0",
    "azureml-mlflow>=1.61.0",
    "anomalib==2.2.0",
    "ultralytics>=8.0.0",
    "torch==2.5.1",
    "torchvision",
    "loguru>=0.7.0",
    "opencv-python-headless",
    "numpy>=1.24.0",
    "freia>=0.2.0,<1.0.0",  # FastFlow 필수 (anomalib optional dep)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
